# psptools

./: .gitignore  README.md
PRXDecompiler/: Makefile  README  TODO  abi.c  allefast.c  allegrex.c  allegrex.h  alloc.c  alloc.h  analyser.c  cfg.c  code.h  constants.c  dataflow.c  decoder.c  graph.c  hash.c  hash.h  lists.c  lists.h  liveness.c  main.c  makedots.sh  module.c  nids.c  nids.h  operations.c  outcode.c  outgraph.c  output.c  output.h  prx.c  prx.h  relocs.c  ssa.c  structures.c  subroutines.c  switches.c  types.h  utils.c  (+1 more)
PRXDecompiler/Lib/: libexpat.a.rename
PRXDecrypter/: .cproject  .project  keys_16_byte.h  main.c  makefile
PRXDecrypter/lib/: lib.rar
PRXDecrypter/prxdecrypter_01g/: prxdecrypter_01g.elf  prxdecrypter_01g.prx
PRXDecrypter/prxdecrypter_02g/: prxdecrypter_02g.elf
PRXTool/: Makefile.am  ProcessElf.cpp  ProcessElf.h  ProcessPrx.cpp  ProcessPrx.h  SerializePrx.cpp  SerializePrx.h  SerializePrxToIdc.cpp  SerializePrxToIdc.h  SerializePrxToXml.cpp  SerializePrxToXml.h  clean.bat  configure.ac  main.cpp
PSPCipher/: CipherBridge.S  Makefile  README.txt  main.c  pspcipher.h
PSPCipher/kbridge/: Makefile  exports.exp  main.c  memlmd_reverse.c  mesg_led_02g.S  mesgled_reverse.c
SGDeemer/deemer_driver/: Makefile  deemerd.exp  main.c
SGDeemer/deemer_hooker/: Makefile  deemerd.S  deemerd.h  main.c
keydump/: Makefile  core.c  core.h  exports.exp  imports.S  main.c  main.cpp
keydump/include/: key.h
keydump/kirk_engine/: kirk_engine.h  types.h
kxploit/: Makefile  README.txt  main.c
memdump/: Makefile  exports.exp  main.c
